@@ -11,7 +11,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="CouchPotato"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="12"
+PKG_REV="13"
 PKG_SHORTDESC="$PKG_ADDON_NAME: automatic movie downloading via Usenet and BitTorrent"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) downloads movies automatically, easily and in the best quality as soon as they are available"
 PKG_DISCLAIMER="Keep it legal and carry on"
