@@ -1,3 +1,6 @@
+13:
+- Add priority setting
+
 12:
 - Update python dependencies
 
